# newsgist

./: README.md  docker-compose.yaml
dags/: README.md  prefect.yaml  pyproject.toml
dags/.tmp_dagster_home_ldz_t546/history/: runs.db
dags/.tmp_dagster_home_ldz_t546/history/runs/: index.db
dags/.tmp_dagster_home_ldz_t546/schedules/: schedules.db
dags/tasks/: fetch_data.py
data/: Dockerfile  Makefile  docker-compose.yml  prefect.yaml  pyproject.toml
data/common/: db.py  pyproject.toml  text.py  utils.py
data/deploy/: __main__.py  constants.py  deploy.py  pyproject.toml  registry.py
data/deploy/images/: Dockerfile
data/flows/news_etl/: news_etl.py  pyproject.toml
db/: init.sql
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/components/: Calendar.tsx  SummaryCard.tsx  SummaryList.tsx
