[project]
name = "news_etl"
version = "0.1.0"
description = "News ETL package"
readme = "README.md"
requires-python = "==3.13.1"
dependencies = [
    "common",
    "google-genai>=0.8.0",
    "newspaper4k>=0.9.0",
    "numpy>=2.4.1",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
]

[tool.uv.sources]
common = { workspace = true }
